; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_opendingux_fbdev_ctx.c_gfx_ctx_opendingux_input_driver.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_opendingux_fbdev_ctx.c_gfx_ctx_opendingux_input_driver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i32**, i8**)* @gfx_ctx_opendingux_input_driver to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gfx_ctx_opendingux_input_driver(i8* %0, i8* %1, i32** %2, i8** %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i8**, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32** %2, i32*** %7, align 8
  store i8** %3, i8*** %8, align 8
  %9 = load i32**, i32*** %7, align 8
  store i32* null, i32** %9, align 8
  %10 = load i8**, i8*** %8, align 8
  store i8* null, i8** %10, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
